adjusting the alignment of the ranking data on front-page hero. Fixes:#26

--- a/sass/site/custom/_custom.scss
+++ b/sass/site/custom/_custom.scss
@@ -294,6 +294,8 @@
             line-height: 1;
         }
         .stats-meta {
+            margin-top: 9.6px;
+            margin-top: 0.6rem;
             .stats-source {
                 @include font-size(0.75);
             }
